fix: fixed swiper-slider with fixed height

--- a/app/globals.css
+++ b/app/globals.css
@@ -145,3 +145,9 @@ button {
     height: 100% !important;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .swiper-slide {
+    height: 560px !important;
+  }
+}
